--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,704 @@
 @font-face {
     font-family: "MuseoSansCyrl300";
-    src: url("assets/fonts/MUSEOSANSCYRL_1.OTF") format("opentype");
+    src: url("../fonts/MUSEOSANSCYRL_1.OTF") format("opentype");
     font-style: normal;
     font-weight: 300;
 }
 @font-face {
     font-family: "MuseoSansCyrl500";
-    src: url("assets/fonts/MUSEOSANSCYRL_2.OTF") format("opentype");
+    src: url("../fonts/MUSEOSANSCYRL_2.OTF") format("opentype");
     font-style: normal;
     font-weight: 500;
 }
 @font-face {
     font-family: "MuseoSansCyrl700";
-    src: url("assets/fonts/MUSEOSANSCYRL_3.OTF") format("opentype");
+    src: url("../fonts/MUSEOSANSCYRL_3.OTF") format("opentype");
     font-style: normal;
     font-weight: 700;
+}
+body{
+    font-family: "MuseoSansCyrl300", sans-serif;
+    font-weight: 300;   
+    color: #282828;
+    font-size: 1.1vw;
+}
+a{
+    color: #282828;
+    text-decoration: none;
+}
+a:active,
+a:visited{
+    color: #282828;
+    text-decoration: none;
+}
+.container{
+    width: 90vw;
+    margin: 0 auto;
+}
+.text-bold{
+    font-family: "MuseoSansCyrl700", sans-serif;
+}
+.text-regular{
+    font-family: "MuseoSansCyrl500", sans-serif;
+}
+.header{
+    background-color: transparent;
+
+    background: url('../img/wave.png') no-repeat bottom,
+                url('../img/girl.png') no-repeat 100% 87%,
+                url('../img/bg-2.png') no-repeat 100% 20% fixed ,
+                url('../img/bg-1.png') no-repeat 10% 60% fixed ,
+                url('../img/main-bg.png') no-repeat center;
+    background-size:100%,45%,10%,15%, cover;
+    
+}
+.top-content{
+    display: flex;
+    justify-content: space-between;
+    padding:30px 0;
+}
+.contact__item.phone{
+    display: flex;
+}
+.location{
+    display: flex;
+    
+}
+.logo img{
+    width: 19vw;
+}
+.wrapper-navigation{
+    display: block;
+}
+.text-description__item{
+    font-size: 1vw;
+    margin-top: 0;
+}
+
+.location__img{
+    vertical-align: middle;
+    height: 8vw;
+    margin-right: 0.5vw;
+}
+.address__text{
+    padding-top: 2px;
+}
+.address{
+    position: relative;
+}
+.map{
+    position: absolute;
+    left: -10vw;
+    top:6vw;
+    display: none;
+}
+.hidden{
+    display: block;
+}
+.hidden-menu{
+    display: block;
+}
+.map-link{
+    text-transform: uppercase;
+    font-size: 0.9vw;
+    color: #ff6078;
+    border-bottom: 2px dashed #ff6078;
+    display: inline-block;
+}
+.map-link:hover{
+    cursor: pointer;
+}
+.address__link{
+    margin-top: 0;
+}
+.top-content__item{
+    align-self: center;
+}
+.phone__icon,
+.time__icon{
+    width: 2.5vw;
+    height: 2.5vw;
+    background-color: #fff;
+    border-radius: 100%;
+    text-align: center;
+    align-self: center;
+    margin-right: 1.5vw;
+    box-shadow:0 0 5px 5px #f2ebe6;
+}
+.fa-clock-o,
+.fa-phone{
+    display: inline-block;
+    margin-top: 7px;
+    color:#ff6078;
+    font-size: 1.5vw;
+}
+.phone__text .work-time{
+    margin-bottom: 0.5vw;
+    margin-top: 0.5vw;
+    font-size: 0.9vw;
+    padding-left:1vw ;
+    position: relative;
+}
+.work-time:before{
+    content: '';
+    width: 8px;
+    height: 8px;
+    background-color: #27b24b;
+    border-radius: 50%;
+    position: absolute;
+    top:3px;
+    left: 0;
+    box-shadow:0 0 5px 5px #f2ebe6;
+}
+.time{
+    display: flex;
+    
+}
+.fa-calendar{
+    margin-right: 1vw;
+    color: #ff6078;
+}
+.modal-send{
+    padding: 0 15px;
+    background-color: #fff;
+    border-radius: 1.9vw;
+    box-shadow:0 3px 0 0 #ebeaea;
+
+}
+.modal-send:hover{
+    cursor: pointer;
+    background-color: rgb(240, 219, 219);
+    color: #fd7b8f;
+}
+
+/* Navigation */
+.main-navigation{
+    background-color: #fff;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 10px;
+    box-shadow:0 20px 0 -15px #ffffff9a;
+    margin-bottom: 80px;
+}
+.mobile-nav{
+    display: none;
+}
+.main-navigation__item{
+    padding: 20px 10px;
+    font-size: 1vw;
+}
+.main-navigation__item:hover{
+    font-weight: 900;
+}
+
+/* Main content */
+.main-content{
+    margin-bottom: 4vw;
+}
+.main-content__text{
+    font-size: 3vw;
+    padding-left: 3vw;
+}
+.button-features{
+    padding-left: 3vw;
+    position: relative;
+}
+.features__item{
+    padding-left: 2vw;
+    font-size: 1.2vws;
+    position: relative;
+}
+.features__item:before{
+    content: '';
+    display: block;
+    position: absolute;
+    width: 0.5vw;
+    height: 0.5vw;
+    background-color: #ff6078;
+    border: 3px solid #fff;
+    box-shadow:0 0 5px 5px #f2ebe6;
+    border-radius: 100%;
+    left: 0;
+}
+.button-free{
+    position: relative;
+    width: 30%;
+}
+
+.features{
+    margin-bottom: 3vw;
+}
+
+.button-free__text{
+    text-transform: uppercase;
+    color:#fff;
+    display: inline-block;
+    font-size: 1vw;
+    text-align: center;
+    background: linear-gradient(to bottom, #fc8a9b, #ff768b);
+    
+    padding: 1vw 9vw 1vw 2vw;
+    border-radius: 2vw;
+    box-shadow:0 3px 0 0 #d7747a;
+    margin-bottom: 11vw;
+}
+.button-free__text:hover{
+    background: linear-gradient(to bottom, #ffa9b6, #ff8fa0);
+    cursor: pointer;
+}
+
+.button-free__img{
+    position: absolute;
+    width: 11vw;
+    top:15px;
+    right: 8%;
+}
+
+.information-content__img{
+    position:absolute;
+    width: 50%;
+    top: 0;
+    left: 50%;
+    margin-left: -13vw;
+    
+}
+.information-content__icon{
+    width: 2.3vw;
+    height: 2.3vw;
+    font-size: 1.5vw;
+    font-style: italic;
+    font-weight: bold;
+    display: inline-block;
+    position: absolute;
+    z-index: 10;
+    top:36%;
+    left: 55%;
+    text-align: center;
+    vertical-align: middle;
+    background: linear-gradient(to bottom, #fc8a9b, #ff768b);
+    border-radius: 100%;
+    color: #fff;
+    line-height: 34px;
+    box-shadow:2px 1px 0 0 #d7747a;
+}
+.information-content__icon:hover{
+    background: linear-gradient(to bottom, #ffa9b6, #ff8fa0);
+    cursor: pointer;
+}
+.focus-modal{
+    width: 8.5vw;
+    min-height: 10vw;
+    text-align: center;
+    font-size: 1vw;
+    background-color: #fff;
+    position: absolute;
+    top: -1vw;
+    left: 50.3vw;
+    padding: 2vw 2vw;
+    padding-bottom: 1vw;
+    border-radius: 1vw;
+    border-top-left-radius: 6vw;
+    border-top-right-radius: 6vw;
+    box-shadow: 0 0 0 10px rgba(255, 255, 255, 0.329);
+    display: none;
+}
+/* Modal window */
+.modal-window{
+    display: none;
+    position: fixed;
+    top:0;
+    left: 0;
+    background-color: #ffa9b68c;
+    width: 100vw;
+    height: 100vh;
+    z-index: 20;
+}
+.widow-education{
+    width: 36vw;
+    position: absolute;
+    left: 50vw;
+    top:45vh;
+    margin-left: -20vw;
+    margin-top: -15vw;
+    background-color: #fff;
+    background: url('../img/modal-book.png') no-repeat 0vw 13vw,
+                url('../img/modal-bg.png') no-repeat center;
+    background-size: 11vw,contain;
+    padding: 3vw 5vw;
+    border-radius: 2vw;
+    overflow:visible;
+}
+.modal-form{
+    display: flex;
+    flex-direction: column;
+}
+.widow-education__title{
+    text-align: center;
+    font-size: 2vw;
+}
+.widow-education__subtitle{
+    text-align: center;
+    font-size: 1vw;
+    margin-bottom: 2vw;
+}
+.modal-form__item{
+    margin-bottom: 1vw;
+    margin-left: 4vw;
+    margin-right: 4vw;
+    padding: 1.3vw 1.5vw;
+    border-radius: 2vw;
+    border: none;
+}
+select.modal-form__item{
+    appearance: none;
+}
+.modal-form__item:focus,
+.modal-form__item:active{
+    border-radius: 2vw;
+    border: none;
+    outline:none
+}
+.button-modal{
+    
+    text-transform: uppercase;
+    color:#fff;
+    display: inline-block;
+    font-size: 1vw;
+    text-align: center;
+    background: linear-gradient(to bottom, #fc8a9b, #ff768b);
+    
+    padding: 1.3vw 9vw 1.3vw 2vw;
+    border-radius: 2vw;
+    box-shadow:0 3px 0 0 #d7747a;
+}
+.button-modal:hover{
+    background: linear-gradient(to bottom, #ffa9b6, #ff8fa0);
+    cursor: pointer;
+}
+.close{
+    position: absolute;
+    right: 4vw;
+    top: 1vw;
+    display: inline-block;
+    color: #888888;
+    padding: 1vw;
+}
+.close:hover{
+    cursor: pointer;
+    color: #282828;
+}
+.success-modal{
+    display: none;
+    background-color: transparent;
+    background: url('../img/succses-bg.png')no-repeat center;
+    background-size: contain;
+    position: absolute;
+    text-align: center;
+    padding: 5vw 10vw;
+    top:10vw;
+    left: 50vw;
+    
+    margin-left: -12vw;
+}
+.fa-check-circle-o{
+    font-weight: 100;
+    font-size: 5vw;
+    color: #ff6078;
+}
+.success-modal .close{
+    right: 1vw;
+}
+
+@media (max-width: 992px){
+    .container{
+        width: 95%;
+    }
+    .top-content{
+        padding:30px 0;
+    }
+    .logo img{
+        width: 19vw;
+    }
+    .text-description__item{
+        font-size: 10px;
+        margin-top: 0;
+    }
+    
+    .location__img{
+        height: 79px;
+        margin-right: 5px;
+    }
+    .address__text{
+        padding-top: 2px;
+    }
+    
+    .map{
+        left: -15%;
+        top:80px;
+    }
+    .map-link{
+        font-size: 10px;
+    }
+    .phone__icon,
+    .time__icon{
+        width: 25px;
+        height: 25px;
+        margin-right: 15px;
+        box-shadow:0 0 5px 5px #f2ebe6;
+    }
+    .fa-clock-o,
+    .fa-phone{
+        margin-top: 5px;
+        font-size: 15px;
+    }
+    .phone__text .work-time{
+        margin-bottom: 5px;
+        margin-top: 5px;
+        font-size: 9px;
+        padding-left:10px ;
+    }
+
+    
+    .fa-calendar{
+        margin-right: 10px;
+    }
+    .modal-send{
+        padding: 0 15px;
+        
+        border-radius: 19px;
+    
+    }
+    
+    
+    /* Navigation */
+    
+    .main-navigation__item{
+        font-size: 10px;
+    }
+    
+    /* Main content */
+    .main-content{
+        margin-bottom: 40px;
+    }
+    .main-content__text{
+        font-size: 30px;
+        padding-left: 30px;
+    }
+    .button-features{
+        padding-left: 30px;
+    }
+    .features__item{
+        padding-left: 20px;
+        font-size: 12px;
+    }
+    .features__item:before{
+        width: 5px;
+        height: 5px;
+    }
+    
+    .features{
+        margin-bottom: 30px;
+    }
+    
+    .button-free__text{
+        font-size: 10px;
+        border-radius: 20px;
+        
+        margin-bottom: 110px;
+    }
+    .button-free__img{
+        width: 110px;
+    }
+    
+    .information-content__img{
+        margin-left:-14%;
+        
+    }
+    .information-content__icon{
+        width: 23px;
+        height: 23px;
+        font-size: 15px;
+        line-height: 26px;
+    }
+    .focus-modal{
+        width: 85px;
+        min-height: 100px;
+        text-align: center;
+        font-size: 10px;
+        top: -1vw;
+        left: 56%;
+        padding: 20px 20px;
+        padding-bottom: 10px;
+        border-radius:10px;
+        border-top-left-radius: 60px;
+        border-top-right-radius: 60px;
+        box-shadow: 0 0 0 10px rgba(255, 255, 255, 0.329);
+        display: none;
+    }
+    /* Modal window */
+    .modal-window{
+        display: none;
+        position: fixed;
+        top:0;
+        left: 0;
+        background-color: #ffa9b68c;
+        width: 100%;
+        height: 100%;
+    }
+    .widow-education{
+        width: 350px;
+        position: absolute;
+        left: 50%;
+        top:45%;
+        margin-left: -175px;
+        background-color: #fff;
+        background: url('../img/modal-book.png') no-repeat 0vw 130px,
+                    url('../img/modal-bg.png') no-repeat center;
+        background-size: 25%,contain;
+        padding: 30px 50px;
+        border-radius: 20px;
+        overflow:visible;
+    }
+    .widow-education__title{
+        font-size: 20px;
+    }
+    .widow-education__subtitle{
+        text-align: center;
+        font-size: 10px;
+        margin-bottom: 20px;
+    }
+    .modal-form__item{
+        margin-bottom: 10px;
+        margin-left: 40px;
+        margin-right: 40px;
+        padding: 13px 15px;
+        border-radius: 20px;
+        border: none;
+    }
+
+    .modal-form__item:focus,
+    .modal-form__item:active{
+        border-radius: 20px;
+        border: none;
+        outline:none
+    }
+    .button-modal{
+        font-size: 10px;
+        padding: 1.3vw 9vw 1.3vw 2vw;
+        border-radius: 20px;
+        box-shadow:0 3px 0 0 #d7747a;
+    }
+    
+    .close{
+        padding: 10px;
+    }
+    .success-modal{
+        padding: 50px 100px;
+        top:10%;
+        left: 50vw;
+        
+        margin-left: -12vw;
+    }
+    .fa-check-circle-o{
+        font-size: 50px;
+    }
+    .success-modal .close{
+        right: 1vw;
+    }
+    .main-navigation__item:nth-child(2){
+        display: none;
+    }
+}
+@media (max-width: 900px){
+    .information-content,
+    .text-description{
+        display: none;
+    }
+    
+}
+@media (max-width: 900px){
+    .logo img{
+        width: 140px;
+    }
+    .button-free__img{
+        width: 35%;
+    }
+}
+@media (max-width: 780px){
+    .main-content__text{
+        font-size: 25px;
+    }
+    .header {
+        background-color: transparent;
+        background: url(../img/wave.png) no-repeat bottom, 
+        url(../img/girl.png) no-repeat 100% 100%, 
+        url(../img/bg-2.png) no-repeat 100% 20% fixed , 
+        url(../img/bg-1.png) no-repeat 10% 60% fixed , 
+        url(../img/main-bg.png) no-repeat center;
+        background-size: 100%,45%,10%,15%, cover;
+    }
+    .wrapper-navigation{
+        display: none;
+    }
+    .main-navigation{
+        
+        z-index: 30;
+        flex-direction: column;
+        position: absolute;
+        right:20px;
+        box-shadow:0 0 5px 5px #f2ebe6;
+    }
+    .mobile-nav{
+        display: block;
+        font-size: 30px;
+        text-align: end;
+        
+    }
+    .button-free__text{
+        font-size: 8px;
+        width: 100%;
+        padding: 1vw 2vw 1vw 2vw;
+    }
+    .button-free__img{
+        display: none;
+    }
+    .modal-send{
+        display: none;
+    }
+    body{
+        font-size: 11px;
+    }
+}
+@media (max-width: 580px){
+    .header {
+        background-color: transparent;
+        background: url(../img/wave.png) no-repeat bottom,
+        url(../img/bg-2.png) no-repeat 100% 20% fixed , 
+        url(../img/bg-1.png) no-repeat 10% 60% fixed , 
+        url(../img/main-bg.png) no-repeat center;
+        background-size: 100%,10%,15%, cover;
+    }
+    .location{
+        display: none;
+    }
+    .contact{
+        font-size: 11px;
+    }
+}
+
+@media (max-width: 380px){
+    .top-content{
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .button-free{
+        width: 80%;
+        margin: 0 auto;
+    }
+    .main-content__text{
+        font-size: 20px;
+    }
+    .mobile-nav{
+        text-align: center;
+    }
 }
